[gd_scene load_steps=6 format=2]

[ext_resource path="res://Theme/Theme.tres" type="Theme" id=1]
[ext_resource path="res://mocraClassic/player_shop/card_template/card_template.gd" type="Script" id=2]
[ext_resource path="res://images/shop/card_background1.png" type="Texture2D" id=3]
[ext_resource path="res://cards/avatar/Cow.png" type="Texture2D" id=4]
[ext_resource path="res://images/Menu_interface/credits.png" type="Texture2D" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1520.0
offset_bottom = -880.0
custom_minimum_size = Vector2( 400, 200 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
offset_right = 400.0
offset_bottom = 200.0
texture = ExtResource( 3 )

[node name="AvatarTexture" type="TextureRect" parent="."]
offset_left = 20.0
offset_top = 50.0
offset_right = 120.0
offset_bottom = 150.0
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="NameLabel" type="Label" parent="."]
offset_left = 204.256
offset_top = 27.018
offset_right = 255.256
offset_bottom = 53.018
text = "COW"

[node name="ScarcityLabel" type="Label" parent="."]
offset_left = 224.249
offset_top = 52.4149
offset_right = 275.249
offset_bottom = 78.4149
text = "common"

[node name="PriceLabel" type="Label" parent="."]
offset_left = 245.0
offset_top = 82.0
offset_right = 281.0
offset_bottom = 108.0
text = "200"

[node name="BuyLabel" type="Label" parent="."]
offset_left = 141.0
offset_top = 115.0
offset_right = 375.0
offset_bottom = 141.0
text = "Buy                  for XXX"

[node name="SpinBox" type="SpinBox" parent="BuyLabel"]
offset_left = 57.8185
offset_top = 0.162994
offset_right = 133.819
offset_bottom = 34.163
scale = Vector2( 0.8, 0.8 )
min_value = 1.0
value = 1.0

[node name="CreditTexture" type="TextureRect" parent="BuyLabel"]
offset_left = 208.039
offset_top = 3.24216
offset_right = 308.039
offset_bottom = 103.242
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -43.0
offset_right = 38.0
offset_bottom = -17.0
text = "BUY"

[node name="SellerLabel" type="Label" parent="."]
offset_left = 14.3395
offset_top = 166.0
offset_right = 111.339
offset_bottom = 192.0
text = "NA"

[node name="RetrieveButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = 30.0
offset_right = 103.0
offset_bottom = 59.0
text = "Retrieve"

[node name="QuantityLabel" type="Label" parent="."]
offset_left = 12.0
offset_top = 146.0
offset_right = 139.0
offset_bottom = 172.0
text = "NA Available"

[connection signal="value_changed" from="BuyLabel/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="RetrieveButton" to="." method="_on_RetrieveButton_pressed"]
